# custom-slice

./: CHANGELOG.md  Cargo.toml  README.md
custom-slice-macros/: Cargo.toml
custom-slice-macros/src/: attrs.rs  codegen.rs  defs.rs  lib.rs
custom-slice-macros/src/codegen/: expr.rs  props.rs  traits.rs  types.rs
custom-slice-macros/src/codegen/traits/: owned.rs  slice.rs
custom-slice-macros/src/defs/: builder.rs
custom-slice-macros/tests/: accessor.rs  all_eq.rs  derives.rs  lower_ascii_string.rs  my_string.rs  std_string.rs  string.rs
custom-slice-macros/tests/utils/: macros.rs  mod.rs
